improve spacing issues in pre-select auto-fill list

--- a/src/pretix/static/pretixpresale/scss/_checkout.scss
+++ b/src/pretix/static/pretixpresale/scss/_checkout.scss
@@ -108,6 +108,9 @@
   margin-top: -15px;
   padding-top: 15px;
 }
+.profile-pre-select .addon-list {
+  margin-bottom: 0;
+}
 .profile-select-container {
   display: none;
   border-bottom: 1px solid $hr-border;
@@ -117,9 +120,6 @@
 .profile-select-container:first-child {
   margin-top: -15px;
   padding-top: 15px;
-}
-.profile-pre-select-date + .profile-scope .profile-select-container:first-child {
-  margin-top: -25px;
 }
 .profile-save-container {
   border-top: 1px solid $hr-border;
